# permute_mmo_rs_ui

./: .gitignore  Cargo.toml  README.md  index.html  permute_mmo_rs_ui-b6d80c1bafb1be5f.js  permute_mmo_rs_ui-b6d80c1bafb1be5f_bg.wasm  permute_mmo_rs_ui-e696daff3b7617f3.js  permute_mmo_rs_ui-e696daff3b7617f3_bg.wasm  spawner.json
.github/workflows/: rust.yml
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs  result_widget.rs  spawner.rs
