[package]
name = "permute_mmo_rs_ui"
default-run = "permute_mmo_rs_ui_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permute_mmo_rs = { git = "https://github.com/SteveCookTU/permute_mmo_rs.git", rev = "1fad044" }
eframe = "0.19.0"
sysbot_rs = { git = "https://github.com/SteveCookTU/sysbot_rs", rev = "f6a8eb3", optional = true }
num_enum = "0.5.7"
lazy_static = "1.4.0"

[[bin]]
name = "permute_mmo_rs_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
sysbot = ['sysbot_rs']

[profile.release]
opt-level = 2 # fast and small wasm

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"