[package]
name = "permute_mmo_rs_ui"
default-run = "permute_mmo_rs_ui_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permute_mmo_rs = { git = "https://github.com/SteveCookTU/permute_mmo_rs.git", rev = "bf66c80" }
eframe = "0.22.0"
sysbot_rs = { git = "https://github.com/SteveCookTU/sysbot_rs", rev = "dc9fe68", optional = true }
num_enum = "0.6.1"
lazy_static = "1.4.0"
serde = {version = "1.0.147", features = ['derive']}
serde_json = "1.0.87"
log = "0.4"

[[bin]]
name = "permute_mmo_rs_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
sysbot = ['sysbot_rs']

[profile.release]
opt-level = 2 # fast and small wasm

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"